--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "chopp-api",
+  "name": "previsao-api",
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node --env-file=.env server.js",
-    "debug": "node --watch --env-file=.env server.js;"
+    "debug": "node --watch --env-file=.env server.js;",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -19,10 +20,7 @@
     "mongodb": "^6.16.0",
     "mysql2": "^3.11.3"
   },
-  
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "[javascript]": {
-      "editor.defaultFormatter": "esbenp.prettier-vscode"
-    }
-  
+  "devDependencies": {
+    "jest": "^29.7.0"
+  }
 }
